# eskom_backtesting

./: .gitignore  CLAUDE.md  COLAB_INSTRUCTIONS.txt  LGD_Dashboard.html  LGD_Development_Factor_Model_Documentation.md  LGD_Model_Methodology.docx  LGD_Model_Output.xlsx  LGD_Multi_Scenario_Output.xlsx  PROJECT_REQUIREMENTS.md  RFD_SESSION_SUMMARY.md  lgd_development_factor_model_colab.py  pyproject.toml  render.yaml  requirements.txt
api/: main.py  models.py
api/routers/: analysis.py  download.py  upload.py
api/services/: chart_builder.py  file_store.py  job_manager.py  serializers.py
app/: streamlit_app.py
app/components/: backtest_tables.py  charts.py  comparison.py  sidebar.py  summary_cards.py  tables.py  triangle_viewer.py
docs/: Dashboard_Metrics_Methodology.md  Dashboard_Metrics_RFD.md  Dashboard_Metrics_Requirements.md  convert_to_docx.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  plotly.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/cards/: KpiCards.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/store/: analysisStore.ts
scripts/: apply_sliding_window.py  create_methodology_doc.js  generate_window_workbooks.py  generate_window_workbooks_v2.py  run_analysis.py  validate_against_excel.py
src/lgd_model/: __init__.py  backtest.py  config.py  core_engine.py  dashboard.py  data_loader.py  export.py  scenario.py  statistics.py  vintage.py
tests/: conftest.py  test_backtest.py  test_core_engine.py  test_scenario.py  test_validation.py  test_vintage.py
(+8 files in other folders)
